Cập nhật code từ repo về local (không sửa code trên repo)